# case-code-review

./: .gitignore  .npmignore  AGENTS.md  CONTRIBUTING.ja-JP.md  CONTRIBUTING.ko-KR.md  CONTRIBUTING.md  CONTRIBUTING.ru-RU.md  CONTRIBUTING.zh-CN.md  LICENSE  Makefile  NOTICE  README.md  README.zh-CN.md  SECURITY.md  go.mod  go.sum  install.sh  package.json
.claude-plugin/: marketplace.json
.github/workflows/: release.yml
cmd/ccr/: config_cmd.go  config_cmd_test.go  export_cmd.go  export_cmd_test.go  flags.go  flags_test.go  llm_cmd.go  main.go  output.go  output_test.go  provider_cmd.go  provider_tui.go  provider_tui_test.go  review_cmd.go  review_cmd_test.go  rules_cmd.go  scan_cmd.go  scan_cmd_test.go  shared.go  stats_cmd.go  stats_cmd_test.go  version.go  viewer_cmd.go
cmd/testdiff/: main.go
docs/: codegraph.md  context-model.md  cross-unit.md  language.md  message-model.md  unit-model.md
eval/: README.md  collect.py  labels.py  posterior.py  replay.py  trajectory_judge.py
eval/corpus/: ccr-self.json
eval/labels/: epscp-doctor.jsonl  qiankunli-case-code-review.jsonl  qiankunli-spec-case.jsonl
eval/reviewbench/: .gitignore  pyproject.toml
eval/reviewbench/experiments/: ccr-vs-ocr.yaml  gates-review-team.yaml
eval/reviewbench/reviewbench/: __init__.py  adapter.py  corpus_build.py  run.py
internal/agent/: agent.go  briefing.go  chain.go  chain_test.go  clue_test.go  consistency.go  consistency_test.go  dogfood_test.go  dossier_test.go  dryrun.go  feature_gate_test.go  init_test.go  preload_test.go  preview.go  preview_test.go  repomap.go  util.go  (+4 more)
(+225 files in other folders)
