[project]
name = "reviewbench"
version = "0.1.0"
description = "Review иЇ„жµ‹зј–жЋ’пјљcorpus(PR) Г— arms(engineГ—gates) зљ„ worksheet иЇ„жµ‹пјЊеџєдєЋ case-harness eval_harness"
requires-python = ">=3.10"
dependencies = [
    "case-harness",
    "spec-case[model]>=0.1.1",
    "pyyaml>=6.0,<7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv.sources]
case-harness = { git = "https://github.com/qiankunli/case-harness", subdirectory = "python" }
spec-case = { git = "https://github.com/qiankunli/spec-case", subdirectory = "python" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reviewbench"]
